Temp Setting CategorySideNav

--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
 
 
     <script src="./assets/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./assets/js/common.js"></script>
     <script src="./assets/js/index.js"></script>
 
       
