Add License and Change common css path

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="./assets/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="./assets/dist/css/common.css" rel="stylesheet">
+    <link href="./assets/css/common.css" rel="stylesheet">
 
     <style>
       .bd-placeholder-img {
