--- a/index.html
+++ b/index.html
@@ -67,6 +67,14 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://blog.naver.com/shootfruit">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://blog.naver.com/shootfruit">Contact</a></li>
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="https://blog.naver.com/PostList.naver?blogId=shootfruit&from=postList&categoryNo=25">Blog</a></li>
+            </ul>
+        </div>
         </div>
       </nav>
     </header>
