--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
     <!-- Bootstrap core CSS -->
-    <link href="./assets/dist/css/side-styles1.css" rel="stylesheet">
+    <!-- Core theme CSS (includes Bootstrap)-->
     <link href="./assets/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./assets/dist/css/side-styles.css" rel="stylesheet">
+    <link href="./assets/dist/css/side-styles1.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="./assets/css/common.css" rel="stylesheet">
