--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="naver-site-verification" content="f9f3c1ebeea6b08fde01af183460443aaa5566ac" />
     <title>MozziMeow Illustration Album</title>
 
-    <link rel="canonical" href="https://hanyujeong.github.io/MozziMeow">
+    <link rel="canonical" href="https://hanyujeong.github.io/MozziMeow/index.html">
 
     <!-- Bootstrap Icons-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
