--- a/index.html
+++ b/index.html
@@ -95,8 +95,14 @@
       </section>
       <div class="album py-5 bg-light">
         <div class="container">
-          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3" id="category-card-list">
-          </div>
+            <nav>
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item active">| CATEGORIES</li>
+                    <!-- <li class="breadcrumb-item">List</li> -->
+                </ol>
+            </nav>
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3" id="category-card-list">
+            </div>
         </div>
       </div>
     </main>
