Change link url

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
             <div class="col-sm-4 offset-md-1 py-4">
               <h4 class="text-white">Contact</h4>
               <ul class="list-unstyled">
-                <li><a href="https://blog.naver.com/PostList.naver?blogId=shootfruit&from=postList&categoryNo=25" class="text-white">Follow on Blog</a></li>
-                <!-- <li><a href="https://blog.naver.com/PostList.naver?blogId=shootfruit&from=postList&categoryNo=25" class="text-white">Like on Facebook</a></li> -->
-                <li><a href="https://blog.naver.com/PostList.naver?blogId=shootfruit&from=postList&categoryNo=25" class="text-white">Email me</a></li>
+                <li><a href="https://blog.naver.com/PostList.naver?blogId=mozzi_meow&from=postList&categoryNo=25" class="text-white">Follow on Blog</a></li>
+                <!-- <li><a href="https://blog.naver.com/PostList.naver?blogId=mozzi_meow&from=postList&categoryNo=25" class="text-white">Like on Facebook</a></li> -->
+                <li><a href="https://blog.naver.com/PostList.naver?blogId=mozzi_meow&from=postList&categoryNo=25" class="text-white">Email me</a></li>
               </ul>
             </div>
           </div>
@@ -119,7 +119,7 @@
     <footer class="text-muted py-5">
       <div class="text-center container">
         <p class="mb-1">MozziMeow Illustration Album is &copy; MozziMeow, but please download and customize it for yourself!</p>
-        <p class="mb-0">New to MozziMeow Illustration? <a href="https://blog.naver.com/PostList.naver?blogId=shootfruit&from=postList&categoryNo=25">Visit my homepage</a>.</p>
+        <p class="mb-0">New to MozziMeow Illustration? <a href="https://blog.naver.com/PostList.naver?blogId=mozzi_meow&from=postList&categoryNo=25">Visit my homepage</a>.</p>
       </div>
     </footer>
     <script src="./assets/dist/js/bootstrap.bundle.min.js"></script>
